<resources>
    <string name="app_name">Scouting App 2019</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="increase_value">+</string>
    <string name="decrease_value">-</string>
    <string name="level_1_fuel_auto">0</string>
    <string name="level_1_hatch_auto">0</string>
    <string name="level_2_fuel_auto">0</string>
    <string name="level_2_hatch_auto">0</string>
    <string name="level_3_fuel_auto">0</string>
    <string name="level_3_hatch_auto">0</string>
    <string name="start_match">Start</string>
    <string name="team_number">Team Number</string>
    <string name="match_number">Match Number</string>
    <string name="alliance_color">Alliance Color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="Sandstorm">SAND</string>
    <string name="tele_op">TELE-OP</string>
    <string name="notes">NOTES</string>
    <string name="fuel_1">Fuel delivered at level one</string>
    <string name="hatch_1">Hatches delivered at level one</string>
    <string name="fuel_2">Fuel delivered at level two</string>
    <string name="hatch_2">Hatches delivered at level two</string>
    <string name="fuel_3">Fuel delivered at level three</string>
    <string name="hatch_3">Hatches delivered at level three</string>
    <string name="habitat">Left Habitat</string>
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="stayed_still">No</string>
    <string name="level_1_fuel_tele">0</string>
    <string name="level_1_hatch_tele">0</string>
    <string name="level_2_fuel_tele">0</string>
    <string name="level_2_hatch_tele">0</string>
    <string name="level_3_fuel_tele">0</string>
    <string name="level_3_hatch_tele">0</string>
    <string name="climb">Climbing</string>
    <string name="can_climb_two">Level 2</string>
    <string name="can_climb_three">Level 3</string>
    <string name="can_not_climb">None</string>
    <string name="team_climb_two">Team Level 2</string>
    <string name="team_climb_three">Team Level 3</string>
    <string name="note_input">Notes</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
</resources>
