<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elija.scoutingapp2019.Tele">

    <TextView
        android:id="@+id/fuel_three_tele"
        android:layout_width="350dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_3"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_two_tele_entry" />

    <Button
        android:id="@+id/fuel_two_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_two_tele_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/fuel_three_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_3_fuel_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_three_tele" />

    <Button
        android:id="@+id/hatch_three_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_three_tele_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hatch_three_tele"
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_3"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_three_tele_entry" />

    <Button
        android:id="@+id/fuel_three_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_three_tele_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hatch_three_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_3_hatch_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_three_tele" />

    <Button
        android:id="@+id/hatch_two_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_two_tele_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sand_tele"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Autonomous"
        android:text="@string/Sandstorm"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tele_tele"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/notes_tele"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Notes"
        android:text="@string/notes"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tele_tele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tele_tele"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:text="@string/tele_op"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/notes_tele"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sand_tele"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fuel_one_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_one_tele_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fuel_one_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_one_tele_entry"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/hatch_one_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_one_tele_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hatch_three_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_three_tele_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hatch_two_tele_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_two_tele_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/hatch_one_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_one_tele_entry"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/fuel_two_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_two_tele_entry"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/can_not_climb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/can_not_climb"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/climb_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/climbing"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/climb_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/can_climb_three"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/can_not_climb"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/climb_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_climb_two"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/can_not_climb"
        app:layout_constraintEnd_toStartOf="@+id/climb_three" />

    <TextView
        android:id="@+id/fuel_one_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_1_fuel_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feul_one_tele" />

    <TextView
        android:id="@+id/hatch_one_tele"
        android:layout_width="275dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_one_tele_entry" />

    <TextView
        android:id="@+id/fuel_two_tele"
        android:layout_width="350dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_one_tele_entry" />

    <TextView
        android:id="@+id/hatch_two_tele"
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_two_tele_entry" />

    <TextView
        android:id="@+id/climbing"
        android:layout_width="275dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/climb"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_three_tele_entry" />

    <TextView
        android:id="@+id/feul_one_tele"
        android:layout_width="274dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_tele" />

    <TextView
        android:id="@+id/hatch_two_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_2_hatch_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_two_tele" />

    <TextView
        android:id="@+id/hatch_one_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_1_hatch_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_one_tele" />

    <TextView
        android:id="@+id/fuel_two_tele_entry"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/level_2_fuel_tele"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_two_tele" />

    <Button
        android:id="@+id/fuel_three_tele_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_three_tele_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/climb_two_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/team_climb_two"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/climb_three_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/team_climb_three"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
