<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elija.scoutingapp2019.Sandstorm">

    <Button
        android:id="@+id/hatch_three_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_three_sand_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fuel_three_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_three_sand_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hatch_three_sand_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_3_hatch_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_three_sand" />

    <TextView
        android:id="@+id/hatch_three_sand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_3"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_three_sand_entry" />

    <Button
        android:id="@+id/hatch_three_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_three_sand_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fuel_three_sand_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_3_fuel_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_three_sand" />

    <Button
        android:id="@+id/hatch_one_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/increase_value"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_one_tele_entry"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/fuel_three_sand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_3"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/fuel_one_sand_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fuel_one_sand_entry"
        app:layout_constraintTop_toBottomOf="@+id/hatch_two_sand_entry" />

    <Button
        android:id="@+id/hatch_two_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_two_sand_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hatch_two_sand_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_2_hatch_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_two_sand" />

    <Button
        android:id="@+id/fuel_three_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_three_sand_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hatch_two_sand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_two_sand_entry" />

    <Button
        android:id="@+id/baseline_yes_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_two"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/baseline_no"
        app:layout_constraintStart_toEndOf="@+id/baseline_yes" />

    <Button
        android:id="@+id/notes_sand"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Notes"
        android:text="@string/notes"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/teleop_sand"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/teleop_sand"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:onClick="Teleop"
        android:text="@string/tele_op"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@id/Sandstorm"
        app:layout_constraintEnd_toStartOf="@+id/notes_sand"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/fuel_one_sand_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1_fuel_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_one_sand" />

    <TextView
        android:id="@+id/fuel_one_sand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fuel_1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teleop_sand" />

    <Button
        android:id="@+id/fuel_one_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_one_sand_entry"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/fuel_one_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/increase_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_one_sand_entry"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/hatch_one_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_one_tele_entry"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/hatch_two_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/increase_value"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hatch_two_sand_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fuel_two_sand_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/decrease_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_two_sand_entry"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/fuel_two_sand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="1dp"
        android:text="@string/increase_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fuel_two_sand_entry"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/hatch_one_tele"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/hatch_1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/fuel_one_sand_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fuel_one_sand_entry"
        app:layout_constraintTop_toBottomOf="@+id/fuel_one_sand_entry" />

    <TextView
        android:id="@+id/hatch_one_tele_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1_hatch_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_one_tele" />

    <TextView
        android:id="@+id/fuel_two_sand"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuel_2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_one_tele_entry" />

    <TextView
        android:id="@+id/fuel_two_sand_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_2_fuel_auto"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_two_sand" />

    <Button
        android:id="@+id/baseline_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stayed_still"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/baseline_yes"
        app:layout_constraintTop_toBottomOf="@+id/Habitat" />

    <Button
        android:id="@+id/baseline_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_one"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/baseline_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Habitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/habitat"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatch_three_sand_entry" />

    <TextView
        android:id="@+id/Sandstorm"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/Sandstorm"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/teleop_sand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
